feature/updated swagger-doc
